PharmaDemo/src/objects/Leave_Balance__c.object
<CustomObject>
    <fields>
        <fullName>BalanceApprovedQuantity__c</fullName>
        <label>BalanceApprovedQuantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BalanceAvailableQuantity__c</fullName>
        <label>BalanceAvailableQuantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BalanceEntitlementQuantity__c</fullName>
        <label>BalanceEntitlementQuantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BalancePlannedQuantity__c</fullName>
        <label>BalancePlannedQuantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BalanceRequestedQuantity__c</fullName>
        <label>BalanceRequestedQuantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BalanceUsedQuantity__c</fullName>
        <label>BalanceUsedQuantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeductionEndDate__c</fullName>
        <label>DeductionEndDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeductionStartDate__c</fullName>
        <label>DeductionStartDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OwnerSAPID__c</fullName>
        <formula>User__r.SAP_EmployeeID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerSAPID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TimeAccountTypeName__c</fullName>
        <label>TimeAccountTypeName</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeAccountType__c</fullName>
        <label>TimeAccountType</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leave_Balances</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Leave Balance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>TimeAccountTypeName__c</columns>
        <columns>BalanceApprovedQuantity__c</columns>
        <columns>BalanceRequestedQuantity__c</columns>
        <columns>BalanceEntitlementQuantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LB-{0000}</displayFormat>
        <label>Leave Balance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Balances</pluralLabel>
    <recordTypes>
        <fullName>VacationRequest</fullName>
        <active>true</active>
        <label>VacationRequest</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>